2012-02-23 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* NSObject+Custom.[m|h]
	  make the return not volatile of method methodIsAbstract:

2012-02-23 Riccardo Mottola <rm@gnu.org>

	* TableViewDataSource.m
	* ZipperDocument.m
	Move table delegate method to ZipperDocument, now the
	real table delegate.
	
2012-02-23 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* TableViewDataSource.m, get rid of unused variable

2012-02-23 Riccardo Mottola <rm@gnu.org>

	* ZipperCell.m
	Remove access to private class variables

	* PreferencesController.m
	Do not create a modal session and let NSApp manage it.

2012-02-22 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* PreferencesController.m Add -dealloc method
	* NSFileManager+Custom.m, ZipperDocument.m, GzipArchive.m
	  get rid of set but unused variables

2012-02-22 Riccardo Mottola <rm@gnu.org>

	* FileInfo.m
	* ZipperDocument.m
	Do not use NSNotFound but NSOrderedDescending

2012-02-22 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* ZipperDocument.m prevent starting the default open
	  application when double clicking the table header

2012-02-22 Riccardo Mottola <rm@gnu.org>

	* PreferencesController.[h,m]
	* ZipperDocument.[h,m]
	Do not leak the preferences controller.

	* Archive.[h,m]
	Correct types.

2012-02-22 Riccardo Mottola <rm@gnu.org>

	* PreferencesController.m
	Do not release on window closure to prevent crash.

2012-02-21 Riccardo Mottola <rm@gnu.org>

	* FileInfo.h
	* FileInfo.m
	* ZipArchive.h
	* ZipArchive.m
	Do not autorelease and fix memory leak.

2012-02-20 Riccardo Mottola <rm@gnu.org>

	* AppDelegate.[h,m]
	Do not open an untitled document. Add boilerplate.

	* Archive.[h,m]
	* ArchiveService.[h,m]
	* FileInfo.[h,m]
	* ZipperDocument.[h,m]
	Add boilerplate. Cleanup.

2012-02-19: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* ZipperDocument.m: setDoubleAction to open the double
	  clicked file with its default viewer, rework opening a